--- a/Tableau Notebook/Crash Records CSV Cleaning-_Tableau.ipynb
+++ b/Tableau Notebook/Crash Records CSV Cleaning-_Tableau.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "b8bf5354-cf87-472f-94cd-faf677896e75",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "id": "ee57654e-d441-40bf-91e5-0aadba00d780",
    "metadata": {},
    "outputs": [
@@ -259,21 +259,21 @@
        "[5 rows x 137 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#CSV import for crashes table\n",
-    "filepath = \"SGO-2021-01_Incident_Reports_ADS.csv\"\n",
+    "filepath = \"../Resources/SGO-2021-01_Incident_Reports_ADS.csv\"\n",
     "df = pd.read_csv(filepath)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "f76b92b2-0cc0-43e1-9d71-2f8253b20163",
    "metadata": {},
    "outputs": [
@@ -291,7 +291,7 @@
        "      dtype='object', length=137)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "id": "12affcef-e53e-4108-ba84-657cead54971",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "id": "629b33d8-fc3e-4f9c-826e-9f26df116407",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "id": "52a7c07f-f141-4303-aea3-bdb1cf131563",
    "metadata": {},
    "outputs": [
@@ -622,7 +622,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "id": "f4958e0c-12bb-4758-8222-ad43a4e97aa8",
    "metadata": {},
    "outputs": [
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "3604bfd9-0eb0-4d13-b210-e11e6808f4c1",
    "metadata": {},
    "outputs": [],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "64cb7934-a986-4a1e-9d59-a5a83e6e48c1",
    "metadata": {},
    "outputs": [
@@ -742,6 +742,78 @@
    ],
    "source": [
     "df2.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2d7cc129-9f1c-4228-8cd0-c823b4993f3f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SV Precrash Speed (MPH)\n",
+       "0.0     563\n",
+       "1.0      79\n",
+       "2.0      64\n",
+       "13.0     41\n",
+       "8.0      41\n",
+       "3.0      41\n",
+       "10.0     35\n",
+       "7.0      34\n",
+       "5.0      33\n",
+       "6.0      29\n",
+       "4.0      28\n",
+       "9.0      27\n",
+       "15.0     21\n",
+       "18.0     17\n",
+       "12.0     17\n",
+       "22.0     14\n",
+       "19.0     14\n",
+       "25.0     13\n",
+       "11.0     13\n",
+       "35.0     12\n",
+       "14.0     12\n",
+       "24.0     12\n",
+       "21.0     11\n",
+       "23.0     11\n",
+       "34.0     10\n",
+       "65.0      9\n",
+       "17.0      7\n",
+       "62.0      7\n",
+       "64.0      6\n",
+       "50.0      6\n",
+       "51.0      6\n",
+       "56.0      6\n",
+       "58.0      5\n",
+       "53.0      5\n",
+       "55.0      5\n",
+       "61.0      4\n",
+       "27.0      4\n",
+       "20.0      4\n",
+       "44.0      4\n",
+       "59.0      4\n",
+       "16.0      3\n",
+       "63.0      2\n",
+       "40.0      2\n",
+       "45.0      2\n",
+       "67.0      2\n",
+       "33.0      1\n",
+       "32.0      1\n",
+       "30.0      1\n",
+       "29.0      1\n",
+       "26.0      1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.value_counts('SV Precrash Speed (MPH)')"
    ]
   },
   {
