--- a/Tableau Notebook/Crash Records CSV Cleaning-_Tableau.ipynb
+++ b/Tableau Notebook/Crash Records CSV Cleaning-_Tableau.ipynb
@@ -303,6 +303,27 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "836a2f7b-558b-4e9a-a4cf-7130dee790e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "12affcef-e53e-4108-ba84-657cead54971",
    "metadata": {},
    "outputs": [],
@@ -336,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "629b33d8-fc3e-4f9c-826e-9f26df116407",
    "metadata": {},
    "outputs": [
@@ -556,7 +577,7 @@
        "[5 rows x 27 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "52a7c07f-f141-4303-aea3-bdb1cf131563",
    "metadata": {},
    "outputs": [
@@ -622,7 +643,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f4958e0c-12bb-4758-8222-ad43a4e97aa8",
    "metadata": {},
    "outputs": [
@@ -685,7 +706,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "id": "db34986a-497b-44dc-af74-37855384f1d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "c603c921-3134-4013-ad70-a8f55182e0f1",
    "metadata": {},
    "outputs": [
@@ -695,7 +724,7 @@
        "(1362, 27)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "3604bfd9-0eb0-4d13-b210-e11e6808f4c1",
    "metadata": {},
    "outputs": [],
@@ -716,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "64cb7934-a986-4a1e-9d59-a5a83e6e48c1",
    "metadata": {},
    "outputs": [
@@ -767,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "2d7cc129-9f1c-4228-8cd0-c823b4993f3f",
    "metadata": {},
    "outputs": [
@@ -828,7 +857,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a706d564-eccd-43c2-a25e-0b7a7ab564ce",
    "metadata": {},
    "outputs": [
@@ -890,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e5302b2a-2e03-49c6-b95b-4fe734dbca26",
    "metadata": {},
    "outputs": [
@@ -993,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "caeeb7e0-1a29-4585-a781-fff6fcac62bb",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "e3ba56f8-f03b-4eac-8f7e-f4a801565aef",
    "metadata": {},
    "outputs": [
@@ -1022,7 +1051,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1033,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "a77a15a5-ff61-484f-83f1-791a310e5484",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1080,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "f854b334-2eb9-43ea-a7a2-1b253a33fb6d",
    "metadata": {},
    "outputs": [
@@ -1276,7 +1305,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1284,7 +1313,7 @@
    "source": [
     "df2['Weather'] = df2['Weather'].str.strip()\n",
     "df2.loc[df2['Weather'] == 'Clear   Cloudy', 'Weather'] = 'Clear'\n",
-    "df2.loc[df2['Weather'] == 'Cloudy   Rain', 'Weather'] = 'Clear'\n",
+    "df2.loc[df2['Weather'] == 'Cloudy   Rain', 'Weather'] = 'Rain'\n",
     "df2.loc[df2['Weather'] == '            ', 'Weather'] = 'Clear'\n",
     "df2['Weather'].fillna(\"Clear\", inplace=True)\n",
     "df2['Weather'] = df2['Weather'].str.strip()\n",
@@ -1293,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "50afbd8b-3816-4024-8d46-03d110fe7fb7",
    "metadata": {},
    "outputs": [
@@ -1301,14 +1330,14 @@
      "data": {
       "text/plain": [
        "Weather\n",
-       "Clear     1093\n",
+       "Clear     1089\n",
        "Cloudy     156\n",
-       "Rain        40\n",
+       "Rain        44\n",
        "Snow         1\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1319,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "bad43076-1d0c-4da4-aa61-d6a90ec79a84",
    "metadata": {},
    "outputs": [],
@@ -1329,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "79fff59b-eb35-48dd-bab5-a5ebcf6fe0c9",
    "metadata": {},
    "outputs": [
@@ -1381,7 +1410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "2d7343c5-ec05-4a4f-99e7-cade6a8c82f5",
    "metadata": {},
    "outputs": [
@@ -1442,7 +1471,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2315,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "e7b43c99-7193-4fc0-8386-edf2ea5c838a",
    "metadata": {},
    "outputs": [],
